# legion

./: .gitignore  CMakeLists.txt  README.md  build.sh  game.h
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
data/: config.txt  game0.json  game1.json  game2.json
lib/: CMakeLists.txt
lib/json/: CMakeLists.txt
lib/json/include/: fieldValidators.h  jsonConvert.h  jsonDSL.h  jsonvalidator.h
lib/json/ruleStructure/: CMakeLists.txt
lib/json/ruleStructure/include/: ruleStructure.h
lib/json/ruleStructure/src/: ruleStructure.cpp
lib/json/src/: CMakeLists.txt  configValidator.cpp  jsonConvert.cpp  jsonDSL.cpp  jsonvalidator.cpp  ruleValidator.cpp  specificationValidator.cpp  variableValidator.cpp
lib/json/variableHelper/: CMakeLists.txt  variableHelper.cpp  variableHelper.h
lib/networking/include/: Server.h  ServerW.h  SimpleServer.h
lib/networking/src/: Client.cpp  ServerW.cpp  SimpleServer.cpp
lib/nlohmann_json/: CMakeLists.txt
lib/util/: Util.h
lib/utils/: CMakeLists.txt  Utils.cpp  Utils.h
lib/utils/include/: Utils.h
lib/utils/src/: Utils.cpp
src/: CMakeLists.txt
src/client/: MenuPage.cpp  client.cpp
src/client/include/: client.h
src/json/include/: jsonvalidator.h
src/json/src/: jsonvalidator.cpp
src/server/: CMakeLists.txt  engine.cpp  main.cpp  server.cpp
src/server/include/: engine.h  game.cpp  game.h  gameServer.h  players.h  server.h  session.h
src/server/src/: engine.cpp  game.cpp  player.cpp  players.cpp  server.cpp  session.cpp
tests/: CMakeLists.txt  Engine.cpp  GameClientTest.cpp  GameServerConfigTest.cpp  GameServerConfigTests.cpp  GameServerTest.cpp  Makefile  ParsedMessageTest.cpp  SessionManagerTest.cpp  SessionTest.cpp  UserTest.cpp  UserTests.cpp  ValidatorTest.cpp  VariableHelperTest.cpp  data.json  engine_arith  engine_arith.cpp  engine_test.cpp  json_convert_test.cpp  rules_impl  rules_impl_test.cpp  rules_impl_test_2.cpp  rules_struct_test.cpp  timer_test.cpp  validator_test.cpp
tests/testfiles/validatorJsons/: configValid.json  configWithFloatPlayerCount.json  configWithIllegalKey.json  configWithMinGTMax.json  configWithMissingField.json  configWithNegativePlayers.json  configWithNonNumericPlayerCount.json  configWithPlayerFieldMissing.json  ruleInvalidName.json  ruleMissingNestedRules.json  ruleMissingParameter.json  ruleNestedValid.json  ruleSingleValid.json  ruleStoredWithinObject.json  ruleWithoutRule.json  simplestGameSpec.json  specWithIllegalKey.json  specWithMissingField.json  validSpec.json
tests/testfiles/variableHelperFiles/: constVarLitsOnly.json  setUpLiteralVars.json
tools/: CMakeLists.txt
tools/gameClient/: CMakeLists.txt
tools/gameClient/include/: ChatWindow.h  Data.h  GameClient.h  MenuManager.h  MenuPage.h
tools/gameClient/src/: ChatWindow.cpp  Data.cpp  GameClient.cpp  MenuClient.cpp  MenuManager.cpp  MenuPage.cpp  SetupMenu.cpp
tools/gameServer/: CMakeLists.txt  Exceptions.cpp
tools/gameServer/include/: GameManager.h  GameServer.h  MessageType.h  ParsedMessage.h  RuleCollection.h  RuleCollection.h.orig  RuleCollection_TEST.h  Session.h  SessionManager.h  User.h  audience.h  engine.h  engine.h.orig  game.h  game.h.orig  gameTurn.h  player.h  players.h  server.h  session.h  session.h.orig  test.cpp
tools/gameServer/src/: CMakeLists.txt  GameManager.cpp  GameServer.cpp  MessageType.cpp  ParsedMessage.cpp  Session.cpp  SessionManager.cpp  User.cpp  engine.cpp  game.cpp  gameServer.cpp  gameTurn.cpp  main.cpp  player.cpp  server.cpp  session.cpp  session.cpp.orig
